--- a/common/common.scss
+++ b/common/common.scss
@@ -339,7 +339,7 @@ div.poll {
   width: calc(100% + 32px) !important;
 }
 .topic-body .contents .cooked .lazyYT-container + .lazyYT-container {
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid color-chooser(#424242, #ffffff);
   margin-top: -16px;
 }
 
@@ -375,7 +375,7 @@ aside.onebox {
   padding: 16px 16px;
 }
 aside.onebox + .onebox {
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid color-chooser(#424242, #ffffff);
   margin-top: -16px;
 }
 aside.quote blockquote {
@@ -937,11 +937,12 @@ div.menu-links-header .menu-links-row {
 }
 
 .alert {
-  background-color: #ffffff;
+  background-color: color-chooser(#424242, #ffffff);
   border: 0;
   border-radius: 2px;
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+  color: $primary;
   padding: 0;
   padding: 16px 16px;
   margin-bottom: 8px;
@@ -995,7 +996,6 @@ nav.post-controls .actions button {
           user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  color: rgba(0, 0, 0, 0.54);
   margin-right: 8px;
   margin-left: 0;
   padding-right: 8px;
@@ -1173,11 +1173,12 @@ nav.post-controls .actions button .read-icon::before {
 }
 
 .topic-body {
-  background-color: #ffffff;
+  background-color: color-chooser(#424242, #ffffff);
   border: 0;
   border-radius: 2px;
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
+  color: $primary;
   padding: 0;
   margin-bottom: 8px;
 }
