--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -181,14 +181,16 @@ $header-padding-y:      8px !default;
 
 // Menu panel
 
-$menu-panel-bg:             #ffffff !default;
-$menu-panel-border-radius:  2px !default;
-$menu-panel-box-shadow:     $shadow-24dp !default;
-$menu-panel-inner-spacer-x: $spacer-sm !default;
-$menu-panel-inner-spacer-y: $spacer-sm !default;
-$menu-panel-item-overlay:   rgba(0, 0, 0, .04) !default;
-$menu-panel-padding-x:      24px !default;
-$menu-panel-padding-y:      20px !default;
+$menu-panel-bg-dark:            #424242 !default;
+$menu-panel-bg-light:           #ffffff !default;
+$menu-panel-border-radius:      2px !default;
+$menu-panel-box-shadow:         $shadow-24dp !default;
+$menu-panel-inner-spacer-x:     $spacer-sm !default;
+$menu-panel-inner-spacer-y:     $spacer-sm !default;
+$menu-panel-item-overlay-dark:  rgba(204, 204, 204, .125) !default;
+$menu-panel-item-overlay-light: rgba(153, 153, 153, .2) !default;
+$menu-panel-padding-x:          24px !default;
+$menu-panel-padding-y:          20px !default;
 
 
 
