--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,7 @@
 // Table of Contents
 //
 // - Basics
+//   - Colours
 //   - Shadows
 //   - Spacers
 //   - Typography
@@ -19,6 +20,34 @@
 // - Menu panel
 // - Table
 // - Text field
+
+
+
+// Basics - Colours
+
+$black-primary:   rgba(0, 0, 0, .87) !default;
+$black-secondary: rgba(0, 0, 0, .54) !default;
+$black-hint:      rgba(0, 0, 0, .38) !default;
+$black-divider:   rgba(0, 0, 0, .12) !default;
+
+$dark-1:          #000000 !default;
+$dark-2:          #212121 !default;
+$dark-3:          #303030 !default;
+$dark-4:          #424242 !default;
+$dark-active:     rgba(204, 204, 204, .25) !default;
+$dark-hover:      rgba(204, 204, 204, .125) !default;
+
+$light-1:         #e0e0e0 !default;
+$light-2:         #f5f5f5 !default;
+$light-3:         #fafafa !default;
+$light-4:         #ffffff !default;
+$light-active:    rgba(153, 153, 153, .4) !default;
+$light-hover:     rgba(153, 153, 153, .2) !default;
+
+$white-primary:   rgba(255, 255, 255, 1) !default;
+$white-secondary: rgba(255, 255, 255, .7) !default;
+$white-hint:      rgba(255, 255, 255, .5) !default;
+$white-divider:   rgba(255, 255, 255, .12) !default;
 
 
 
@@ -117,12 +146,12 @@ $material-icon-size:        24px !default;
 // Button
 
 $btn-bg-dark:           unquote('$tertiary') !default;
-$btn-bg-light:          #ffffff !default;
-$btn-bg-active-dark:    rgba(204, 204, 204, .25) !default;
-$btn-bg-active-light:   rgba(153, 153, 153, .4) !default;
-$btn-bg-hover-dark:     rgba(204, 204, 204, .125) !default;
-$btn-bg-hover-light:    rgba(153, 153, 153, .2) !default;
-$btn-bg-overlay:        rgba(0, 0, 0, .12) !default;
+$btn-bg-light:          $light-4 !default;
+$btn-bg-active-dark:    $dark-active !default;
+$btn-bg-active-light:   $light-active !default;
+$btn-bg-hover-dark:     $dark-hover !default;
+$btn-bg-hover-light:    $light-hover !default;
+$btn-bg-overlay:        $black-divider !default;
 $btn-border-radius:     2px !default;
 $btn-box-shadow:        $shadow-2dp !default;
 $btn-box-shadow-active: $shadow-8dp !default;
@@ -138,8 +167,8 @@ $btn-padding-y:         (($btn-height - $btn-font-size) / 2) !default;
 // Card
 
 $card-avatar-size:      36px !default;
-$card-bg-dark:          #424242 !default;
-$card-bg-light:         #ffffff !default;
+$card-bg-dark:          $dark-4 !default;
+$card-bg-light:         $light-4 !default;
 $card-border-radius:    2px !default;
 $card-box-shadow:       $shadow-2dp !default;
 $card-box-shadow-hover: $shadow-8dp !default;
@@ -155,8 +184,8 @@ $card-padding-y:        16px !default;
 
 // Chip
 
-$chip-bg-dark:        rgba(204, 204, 204, .125) !default;
-$chip-bg-light:       rgba(153, 153, 153, .2) !default;
+$chip-bg-dark:        $dark-hover !default;
+$chip-bg-light:       $light-hover !default;
 $chip-box-shadow:     $shadow-2dp !default;
 $chip-font-size:      13px !default;
 $chip-height:         32px !default;
@@ -171,8 +200,8 @@ $chip-width:          $chip-height !default;
 
 $header-box-shadow:         $shadow-4dp !default;
 $header-height:             56px !default;
-$header-item-overlay-dark:  rgba(255, 255, 255, .12) !default;
-$header-item-overlay-light: rgba(0, 0, 0, .12) !default;
+$header-item-overlay-dark:  $white-divider !default;
+$header-item-overlay-light: $black-divider !default;
 $header-inner-spacer-x:     $spacer-sm !default;
 $header-margin-y:           $spacer !default;
 $header-padding-x:          0 !default;
@@ -182,14 +211,14 @@ $header-padding-y:          8px !default;
 
 // Menu panel
 
-$menu-panel-bg-dark:            #424242 !default;
-$menu-panel-bg-light:           #ffffff !default;
+$menu-panel-bg-dark:            $dark-4 !default;
+$menu-panel-bg-light:           $light-4 !default;
 $menu-panel-border-radius:      2px !default;
 $menu-panel-box-shadow:         $shadow-24dp !default;
 $menu-panel-inner-spacer-x:     $spacer-sm !default;
 $menu-panel-inner-spacer-y:     $spacer-sm !default;
-$menu-panel-item-overlay-dark:  rgba(204, 204, 204, .125) !default;
-$menu-panel-item-overlay-light: rgba(153, 153, 153, .2) !default;
+$menu-panel-item-overlay-dark:  $dark-hover !default;
+$menu-panel-item-overlay-light: $light-hover !default;
 $menu-panel-padding-x:          24px !default;
 $menu-panel-padding-y:          20px !default;
 
