--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -19,11 +19,14 @@ aside {
     }
 
     .quote-controls {
+      color: color-chooser($white-secondary, $black-secondary);
+
       .back,
       .quote-other-topic {
         &::before {
           @include material-icons;
 
+          color: color-chooser($white-secondary, $black-secondary);
           content: 'arrow_upward';
           margin-left: $card-inner-spacer-x;
         }
@@ -46,6 +49,7 @@ aside {
     .title {
       border-left: 0;
       border-radius: $card-border-radius $card-border-radius 0 0;
+      color: color-chooser($white-secondary, $black-secondary);
       padding: $card-padding-y $card-padding-x 0;
 
       .avatar {
