--- a/common/common.scss
+++ b/common/common.scss
@@ -367,7 +367,7 @@ div.poll {
 }
 
 aside.onebox {
-  background-color: $secondary;
+  background-color: color-chooser(#212121, #f5f5f5);
   border: 0;
   margin-right: -16px;
   margin-bottom: 16px;
