--- a/scss/common/_cooked-aside.scss
+++ b/scss/common/_cooked-aside.scss
@@ -1,6 +1,6 @@
 aside {
   &.onebox {
-    background-color: unquote('$secondary');
+    background-color: color-chooser($dark-2, $light-2);
     border: 0;
     margin-right: ($card-padding-x * -1);
     margin-bottom: $card-inner-spacer-y;
