add styles for code, kbd, pre and related elements

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -7,6 +7,7 @@
 //
 // - Base
 // - Chip
+// - Code
 // - Cooked
 //   - Aside
 // - Header
@@ -18,6 +19,7 @@
 
 @import 'common/base';
 @import 'common/chip';
+@import 'common/code';
 @import 'common/cooked';
 @import 'common/cooked-aside';
 @import 'common/header';
