--- a/common/common.scss
+++ b/common/common.scss
@@ -288,6 +288,59 @@ sup {
   content: 'lock_outline';
 }
 
+code body,
+kbd body,
+pre body,
+samp body {
+  font-family: "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+code {
+  background-color: color-chooser(#212121, #f5f5f5);
+  border-radius: 2px;
+  color: #bd4147;
+  font-size: 87.5%;
+  padding: 0.2rem 0.4rem;
+}
+
+kbd {
+  background-color: #333333;
+  border-radius: 2px;
+  color: #ffffff;
+  font-size: 87.5%;
+  padding: 0.2rem 0.4rem;
+}
+kbd kbd {
+  font-size: 100%;
+  padding: 0;
+}
+
+pre {
+  background-color: color-chooser(#212121, #f5f5f5);
+  border-radius: 2px;
+  color: $primary;
+  display: block;
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 16px;
+  padding: 16px 16px;
+}
+pre code {
+  background-color: transparent;
+  border-radius: 0;
+  color: inherit;
+  font-size: inherit;
+  padding: 0;
+}
+
+.hljs {
+  color: $primary;
+  padding: 16px 16px;
+}
+pre .hljs {
+  padding: 0;
+}
+
 div.poll {
   margin-top: 0;
   margin-bottom: 16px;
