--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,9 +13,14 @@
 //   - Shadows
 //   - Spacers
 //   - Typography
+//     - Font size
+//     - Font weight
+//     - Letter spacing
+//     - Line height
 // - Button
 // - Card
 // - Chip
+// - Code
 // - Header
 // - Menu panel
 // - Table
@@ -79,41 +84,55 @@ $spacer-xl: 48px !default;
 
 
 
-// Basics - Typography
+// Basics - Typography - Font family
 
 $font-family-monospace:     "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-sans-serif:    Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
 $font-family-serif:         "Roboto Slab", Georgia, "Times New Roman", Times, serif !default;
 
-$font-size-base:            14px !default;
-$font-size-root:            16px !default;
 
-$font-size-display-4:       112px !default;
-$font-size-display-3:       56px !default;
-$font-size-display-2:       45px !default;
-$font-size-display-1:       34px !default;
-$font-size-headline:        24px !default;
-$font-size-title:           20px !default;
-$font-size-subheading:      16px !default;
-$font-size-body-2:          14px !default;
-$font-size-body-1:          14px !default;
-$font-size-caption:         12px !default;
 
-$font-weight-bold:          700 !default;
-$font-weight-medium:        500 !default;
-$font-weight-regular:       400 !default;
-$font-weight-light:         300 !default;
+// Basics - Typography - Font size
 
-$font-weight-display-4:     $font-weight-light !default;
-$font-weight-display-3:     $font-weight-regular !default;
-$font-weight-display-2:     $font-weight-regular !default;
-$font-weight-display-1:     $font-weight-regular !default;
-$font-weight-headline:      $font-weight-regular !default;
-$font-weight-title:         $font-weight-medium !default;
-$font-weight-subheading:    $font-weight-regular !default;
-$font-weight-body-2:        $font-weight-medium !default;
-$font-weight-body-1:        $font-weight-regular !default;
-$font-weight-caption:       $font-weight-regular !default;
+$font-size-base:       14px !default;
+$font-size-root:       16px !default;
+
+$font-size-display-4:  112px !default;
+$font-size-display-3:  56px !default;
+$font-size-display-2:  45px !default;
+$font-size-display-1:  34px !default;
+$font-size-headline:   24px !default;
+$font-size-title:      20px !default;
+$font-size-subheading: 16px !default;
+$font-size-body-2:     14px !default;
+$font-size-body-1:     14px !default;
+$font-size-caption:    12px !default;
+
+$material-icon-size:   24px !default;
+
+
+
+// Basics - Typography - Font weight
+
+$font-weight-bold:       700 !default;
+$font-weight-medium:     500 !default;
+$font-weight-regular:    400 !default;
+$font-weight-light:      300 !default;
+
+$font-weight-display-4:  $font-weight-light !default;
+$font-weight-display-3:  $font-weight-regular !default;
+$font-weight-display-2:  $font-weight-regular !default;
+$font-weight-display-1:  $font-weight-regular !default;
+$font-weight-headline:   $font-weight-regular !default;
+$font-weight-title:      $font-weight-medium !default;
+$font-weight-subheading: $font-weight-regular !default;
+$font-weight-body-2:     $font-weight-medium !default;
+$font-weight-body-1:     $font-weight-regular !default;
+$font-weight-caption:    $font-weight-regular !default;
+
+
+
+// Basics - Typography - Letter spacing
 
 $letter-spacing-display-4:  -.04em !default;
 $letter-spacing-display-3:  -.02em !default;
@@ -126,20 +145,22 @@ $letter-spacing-body-2:     0 !default;
 $letter-spacing-body-1:     0 !default;
 $letter-spacing-caption:    0 !default;
 
-$line-height-base:          1.428571 !default;
 
-$line-height-display-4:     1 !default;        // 112px
-$line-height-display-3:     1.035714 !default; // 58px
-$line-height-display-2:     1.066667 !default; // 48px
-$line-height-display-1:     1.176471 !default; // 40px
-$line-height-headline:      1.333333 !default; // 32px
-$line-height-title:         1.4 !default;      // 28px
-$line-height-subheading:    1.5 !default;      // 24px
-$line-height-body-2:        1.428571 !default; // 20px
-$line-height-body-1:        1.428571 !default; // 20px
-$line-height-caption:       1.5 !default;      // 18px
 
-$material-icon-size:        24px !default;
+// Basics - Typography - Line height
+
+$line-height-base:       1.428571 !default; // 20px
+
+$line-height-display-4:  1 !default;        // 112px
+$line-height-display-3:  1.035714 !default; // 58px
+$line-height-display-2:  1.066667 !default; // 48px
+$line-height-display-1:  1.176471 !default; // 40px
+$line-height-headline:   1.333333 !default; // 32px
+$line-height-title:      1.4 !default;      // 28px
+$line-height-subheading: 1.5 !default;      // 24px
+$line-height-body-2:     1.428571 !default; // 20px
+$line-height-body-1:     1.428571 !default; // 20px
+$line-height-caption:    1.5 !default;      // 18px
 
 
 
@@ -193,6 +214,19 @@ $chip-inner-spacer-x: $spacer-xs !default;
 $chip-padding-x:      12px !default;
 $chip-padding-y:      8px !default;
 $chip-width:          $chip-height !default;
+
+
+
+// Code
+
+$code-color:     #bd4147 !default;
+$code-font-size: 87.5% !default;
+$code-padding:   .2rem .4rem !default;
+
+$kbd-bg:         #333333 !default;
+$kbd-color:      #ffffff !default;
+
+$pre-padding:    $card-padding-y $card-padding-x !default;
 
 
 
