add styles for dropdown

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,6 +2,7 @@
 //
 // - Button
 // - Card
+// - Dropdown
 // - Hover
 // - Material icons
 // - Strip unit
@@ -13,6 +14,7 @@
 
 @import 'mixins/button';
 @import 'mixins/card';
+@import 'mixins/dropdown';
 @import 'mixins/hover';
 @import 'mixins/material-icons';
 @import 'mixins/strip-unit';
