--- a/scss/common.scss
+++ b/scss/common.scss
@@ -10,6 +10,7 @@
 // - Code
 // - Cooked
 //   - Aside
+// - Dropdown
 // - Header
 // - Menu panel
 // - Notification
@@ -22,6 +23,7 @@
 @import 'common/code';
 @import 'common/cooked';
 @import 'common/cooked-aside';
+@import 'common/dropdown';
 @import 'common/header';
 @import 'common/menu-panel';
 @import 'common/notification';
