--- a/common/common.scss
+++ b/common/common.scss
@@ -496,6 +496,53 @@ aside.quote .title + blockquote {
   border-radius: 0 0 2px 2px;
 }
 
+.dropdown-menu {
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
+  background-color: color-chooser(#424242, #ffffff);
+  border: 0;
+  -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 8px 0;
+}
+.dropdown-menu a {
+  font-size: inherit;
+  line-height: inherit;
+  padding: 12px 16px;
+}
+.dropdown-menu li > a:focus,
+.dropdown-menu .active > a:focus {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+@media (hover: hover) {
+  .dropdown-menu li > a:hover,
+  .dropdown-menu .active > a:hover {
+    background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+  }
+}
+.dropdown-menu .active > a {
+  background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+.dropdown-menu a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.dropdown-menu a > div {
+  margin-left: 16px;
+}
+.dropdown-menu span {
+  color: color-chooser(rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.54));
+  font-size: inherit;
+}
+.dropdown-menu .icon {
+  font-size: inherit;
+  margin-top: .1875em;
+}
+
 .d-header {
   -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
           box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
@@ -1382,6 +1429,14 @@ nav.post-controls .actions button .read-icon::before {
   right: 0;
   bottom: 0;
   left: 0;
+}
+#topic-footer-buttons .dropdown-menu {
+  font-size: 13px;
+  line-height: 1.5;
+  padding: 16px 0;
+}
+#topic-footer-buttons .dropdown-menu a {
+  padding: 6.25px 24px;
 }
 #topic-footer-buttons .fa {
   font-family: 'Material Icons';
